# OpenRGBWindowsDynamicLightingSyncPlugin

./: .gitignore  .gitmodules  LICENSE  README.md
driver/: WindowsDynamicLightingDriver.pro
driver/common/: DriverProtocol.h
driver/src/: WDLDriverServer.cpp  WDLDriverServer.h  main.cpp
scripts/: build-driver.bat  build-plugin.bat  build.bat  build_qt515.bat  build_temp.bat  clean.bat  compile_manual.bat  compile_minimal.bat  compile_qt515.bat  compile_qt683.bat  compile_simple.bat  compile_test.bat  continue_build.bat  generate_moc_qt515.bat  install-plugin.bat  test_moc.bat
src/: AppxManifest.xml  CMakeLists.txt  WindowsDynamicLightingSync.cpp  WindowsDynamicLightingSync.h  WindowsDynamicLightingSync.html  WindowsDynamicLightingSync.pro  WindowsDynamicLightingSyncTests.cpp  WindowsDynamicLightingSyncWidget.cpp  WindowsDynamicLightingSyncWidget.h  app.manifest  resources.qrc  test_compile.cpp  test_winrt.cpp
